--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3 ><a  href="https://www.figma.com/proto/qxl3URC7LGlgryRA0eVsmA/WATTANANAKORN-HOSPITAL-UI?type=design&node-id=26-4&t=YAQL0sUG8qBj14ZJ-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=26%3A2&show-proto-sidebar=1&mode=design">First design on Figma</a></h3>
-							<span >Study case ระบบจัดการคนไข้โรงพยาบาลวัฒนานคร</span>
+							<span >Study case patient management system</span>
 						</div>
 					</div>
 				</div>
@@ -468,16 +468,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-6.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</section>
@@ -524,11 +515,21 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Email Address</h3>
-							<p><a href="mailto:info@yoursite.com">chutinthon.w@gmail.com</a></p>
+							<p><a href="#">chutinthon.w@gmail.com</a></p>
 						</div>
 					</div>
 				</div>
-				
+				<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+					<div class="align-self-stretch box text-center p-4 shadow">
+						<div class="icon d-flex align-items-center justify-content-center">
+							<span class="icon-heart"></span>
+						</div>
+						<div>
+							<h3 class="mb-4">Thank you</h3>
+							<p><a href="#">Hava a nice day</a></p>
+						</div>
+					</div>
+				</div>
 			</div>
 
 
